--- a/shared/health/中毒.md
+++ b/shared/health/中毒.md
@@ -12,3 +12,14 @@
 
 水は一度に1Lくらい、塩は一度に30gくらいで致死量になることがある。
 なんでも摂りすぎは毒になる。
+
+毒への対処は、
+
+1. 吸収を抑える
+2. 排出を促す
+3. 対症療法
+4. 解毒
+
+が重要。
+まずは毒を取らない、水を飲んで薄める、が基本。炭を飲んだりする場合もある。
+解毒は未知の毒ならできない場合もある。
