--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
@@ -42,7 +42,16 @@
 
 ヒットストップが短くて確認が難しい。
 
-## {端} OD上ショット: 18
+## DR 2MP: 15-18
+
+ガードで+3から後退がシミーになる。ヒットすると4HPが入る。
+ガードからの打撃はMPでもいいし、2MPかHPタゲコンで4F遅れから2MPや4HPが繋がる。
+
+基本的には密着したほうがいいけど、遠目から強ネクサスで止まるパターンとの択でもいい。
+
+- DR 2MP(h), 4HP
+- DR 2MP(g): +3
+  - 後退: シミー
 
 ## DR 2MK: 17-21
 
