--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -86,6 +86,13 @@
 
 シミーは2MPが無難。ODネクかTC。ラッシュも楽ではある。余裕があれば2HP強ネク。
 
+## 対空
+
+4HPや6HKから火力を出しつつラインを上げたい。
+ちまちまアッパーを当てるより3倍のリターンがある。
+
+安定は弱アッパーだけど、短いので空ジャンプに注意。当てた後の状況はいい。
+
 ## 守り
 
 端でも強ショットやニーが強いし、ステローも強いので、素直にガードで待ってもいい。手を出してこないならコパンや中パンからネクサスでもいいし。
