--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -45,14 +45,14 @@
 - 2MP
   - 弱ショット: 無敵技以外で割り込めない、先端ならガードされても-6くらいで大足の外
   - 中ネクサス: ガードさせて読み合い
-- {端} ODニー: ガードされて-2の投げ間合い
 - 2HP
   - 弱ショット: 先端ならガードされても連続ガードの-5くらいで大足の外、インパクトを返しやすい
   - 中ニー: 先端なら立ちガードされても-2の投げ間合い、しゃがみなら+2で投げ間合い
-- DR MP
 - MK: ヒット確認でTCから状況が良い、インパクトに弱い
 - HP: ドライブゲージを削る
 - 6LK: 下段、カウンターでコンボ
+- DR 2MP
+- DR 強ネクサス: ラッシュを止めようとしてくる相手に差し返し気味に当たる
 - 中ニー: 遠めなら確反がない、しゃがんでいるとガードされても+2で投げ間合い
 - 強ショット: 速い弾
 - 中ショット, 強ショット: 2MP先端キャンセルくらいの距離でもジャンプできない
@@ -76,15 +76,13 @@
 
 ## 差し返しの選択肢
 
-- 2MP(pc)
-- 2HP(pc)
-- 2HK
-- LK(pc), 強アッパー
+- 2HK: 11F、かなり長い
+- 2MP(pc)-HP: 7F、遅れてもフォローできる
+- 2HP(pc): 11F、強ネクサスが直接入る
+- LK(pc), 強アッパー: 7F、2MPより少し長い、遅れてもフォローできない
 
 地上戦の差し返しは2HK一本でもいい。
 2MPもあるけど足払いに当たりづらいし。LKも結構長い。
-
-シミーは2MPが無難。ODネクかTC。ラッシュも楽ではある。余裕があれば2HP強ネク。
 
 ## 対空
 
