--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻め.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻め.md
@@ -7,9 +7,20 @@
 相手のSAが1までなら弾を重ねるのも強い。
 中ショットになるので最速しゃがみ攻撃暴れには負けるけど、基本的に中段との択になる。
 
+## 初手の攻め
+
+初期位置からはDR 2MPとDR 強ネクサスの択が届く。
+
+- DR 2MP: 遠いのでヒットしたらTCで追撃する
+- DR 強ネクサス: ラッシュを止めようとすると当たる
+- ガード
+  - {DR}, 2MP: ラッシュを見てから止める
+
 ## BOさせた場合の攻め
 
-- 連続ガードになる削りはコンボ参照。
+- 連続ガードになる2MP, 強ニーが基本。
+- 連続ガードになるその他の削りはコンボ参照。
+- マイトが連続ガードになる。
 - 強/ODネクサス(g)-ノヴァに無敵技以外で割り込めない。
 - 2LP(g), 2MPが4F技と相打ちで2MPが入る
 - DR MP(g)、グリード(g)、ノヴァ(g)
@@ -18,12 +29,22 @@
 
 - 中ニー(g): 遠めで+4前後で削り250
 - 強ニー(g): -1で削り350
-- MP(g), 2LP, 2MP, 弱ニー, 2LP, 弱マイト
-- MP(g), 2LP, 2MP, 弱ニー, 2LP,
-- 2LP(g) 3回, 弱ニー: +1で削り200
-- {屈} 2MP, 強ニー: +8で削り350、立っていても-1
+- 2LP(g), MP: 無敵技以外で割り込めない
+- MP(g), 2LP, 2MP, 弱ニー
+  - 2LP, 弱マイト
+  - 2LP, 弱ショット
+- 2LP(g), MP, 2LP, 弱ニー: +1、ド密着ではない
+  - 2LP(g), MP, 2MP, 弱ニー: +1、以下同じルートで繰り返し
+  - 2LP(g), MP, 2MP, 強ニー
+- 2MP, 強ニー: 削り350、しゃがみは+8で2MPおかわり、立っていても-1の投げ間合い
+- 2MP, 中ネクサス
+  - マイト: 連続ガードで削り325、-1で投げ間合いの外
+  - 後退: シミー
 - {立} 2MP, 中ショット, 2LP, 2MP, 弱ニー: +2で削り375、しゃがみには当たらない
 - 6LK, 2LP, 弱ショット
+- DR 6LK/6MP(g)
+  - 2MP, 強ニー
+  - MP, 2LP, 弱ニー: +1
 
 BO中は特にOD上ショットを削りで使っていくのが大事。
 
@@ -33,6 +54,8 @@ BO中は特にOD上ショットを削りで使っていくのが大事。
 ノーキャンセルで2LP(g), 2LP, 2LK, 弱ニーみたいに繋いでもいい。
 
 単発の中ニーも強い。
+
+相手が強ニーをしゃがみガードすると2MPが連続ガードになるのでおかわりできる。
 
 ## シミー
 
