--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -369,6 +369,9 @@ MP, MP, LPなど遠目で当たると(+1)になる。
 - 強ショット: しゃがみ技を出さないと当たる、ガードで+11
   - 中ショット, {前方ジャンプ}, 中アッパー
 - 中ニー(+6): ガードや後退には(+8)で当たって+1の投げ間合い、BOの時は特に2LP, MP, 2MPルートに入れるので優秀
+  - {ガード}, 2LP, LP, 弱ショット: -6で大足の外
+  - {ガード}, 通常投げ: 4F遅れ
+  - {ガード}, 後退: シミー
 
 演出が入って中央でも端でも同じ状況になるので攻めやすい。
 
