--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
@@ -44,14 +44,19 @@
 
 ## DR 2MP: 15-18
 
+- {近} DR 2MP(h), 4HP
+- {遠} DR 2MP(h)-HP
+- DR 2MP(g): +3
+  - 後退: シミー
+- DR 2MP(g)-HP
+  - 弱ネクサス: 読み合い
+  - OD下ショット: HPから連続ガード、-1でコパンの外
+  - ODニー: 4F遅れ、立ちガードで-2、しゃがみで+1の投げ間合い、相打ちでSA2が入る
+
 ガードで+3から後退がシミーになる。ヒットすると4HPが入る。
 ガードからの打撃はMPでもいいし、2MPかHPタゲコンで4F遅れから2MPや4HPが繋がる。
 
-基本的には密着したほうがいいけど、遠目から強ネクサスで止まるパターンとの択でもいい。
-
-- DR 2MP(h), 4HP
-- DR 2MP(g): +3
-  - 後退: シミー
+基本的には密着したほうがいいけど、差し合いで遠目から強ネクサスで止まるパターンとの択でもいい。
 
 ## DR 2MK: 17-21
 
