--- a/games/Street-Fighter/Six/characters/Sagat/サガットの特徴.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの特徴.md
@@ -5,30 +5,50 @@
 - ラッシュが遅い
 - ラッシュが長い
 
+## 得意なこと
+
+- 差し合いに強い
+- 対空で火力を出せる
+- BOさせるとゴリゴリ削れる
+
+対空は4HP/6HKを積極的に狙いたい。
+
+## 苦手なこと
+
+サガットはインパクトがきつい。ニーや弱ショットの隙が大きすぎて見てからでも結構確定してしまう。インパクトに勝てる入れ込み技もなくて不安定。小パンや中パンのフェイントで揺さぶるのが大事かも。
+
 ## ガードされて有利
 
 - MP: 2F
 - {立} 6HK: 4F
-- {立} グリード(中派生): 4F
-- ノヴァ(強派生): 2F
-- 弱ニー(+8): 0-2F (相手がしゃがんでいると+10になりやすい)
-- 中ニー(+7): 0-3F (相手がしゃがんでいると+9になりやすい)
-- 強ニー(+5): 0-5F
-- {屈} 強ニー: 4F
+- {立} グリード(ネクサス中派生): 4F
+- ノヴァ(ネクサス強派生): 2F
+- 弱ニー(+8): 0-2F (相手がしゃがんでいて下りが当たると2F以上)
+- 中ニー(+7): 0-3F (相手がしゃがんでいて下りが当たると2F以上)
+- 強ニー(+5): 0-5F (相手がしゃがんでいて下りが当たると4F以上)
 - OD上ショット: 6F
 
 ## ガードされて確反
 
-- HP: -5
-- 2HP: -5 (キャンセル可)
-- 4HP: -10 (キャンセル可)
-- HK: -5 (キャンセル可)
-- 弱ショット: -7
-- 弱ニー: -8 (BOでも確反)
-- 中ニー: -7
-- 強ニー: -5
-- 弱/中ネクサス: -5
-- マイト(弱派生): -5
+- HP: 5F
+- MK-HK: 8F
+- {立} HK: 5F (キャンセル可)
+- {屈} HK: 7F (キャンセル可)
+- 2MP-HP: 14F (キャンセル可)
+- 2HP: 5F (キャンセル可)
+- 2HK: 12F
+- {立} 4HP: 10F (キャンセル可)
+- {屈} 4HP: 13F
+- アッパー: 37F以上
+- 弱ショット: 7F
+- 弱ニー: 8F
+- 中ニー: 7F
+- 強ニー: 5F
+- 弱/中ネクサス: 5F
+- マイト(ネクサス弱派生): 5F
+- SA: 31F以上
+
+弱ニーの上りはBOでも確反があるけど、MK-HK、2HK、弱ショット、弱/中ネクサス、マイト、あたりはBOでかなり使いやすくなる。
 
 ## 技の長さ
 
@@ -46,14 +66,17 @@
 - {立} HK
 - 2HK
 - HP = 6HK, SA2
-- バクステ 2回 = DR MP
+- バクステ 2回
 - {立} 6HK
+- DR MP
 - 弱ニー
 - 6LK
 - 強ネクサス
 - DI
-- 強アッパー
+- (初期位置)
+- DR 2MP = 強アッパー = DR 強ネクサス
 - 中ニー
-- バクステ 3回
+- バクステ 3回 = DR 2HK
+- DR 6MP
 - 強ニー = DR 6LK
 - バクステ 4回
