--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -1,4 +1,4 @@
-## 総合
+## サガットの狙い
 
 相手をBOさせるのが強い。
 無理に近づいて崩すよりもゲージを削る。
@@ -7,30 +7,41 @@
 密着で攻撃をガードされたらそのまま連携で離さないと後ろ歩きが遅いけど、弱ショットが-7なので確反をもらうことがある。
 中間択としてはとりあえずネクサスに繋いでじゃんけんに持ち込む手もある。
 
-サガットはインパクトがきつい。ニーや弱ショットの隙が大きすぎて見てからでも結構確定してしまう。インパクトに勝てる入れ込み技もなくて不安定。小パンや中パンのフェイントで揺さぶるのが大事かも。
+弾はそんなに強くないけど、要所で使うと効果が高い。ピーキーな性能。
 
-## 差し合い
+## 差し合いの基本
+
+ステローやニーで触りにいって、嫌がったところに外から弾を当てたり2MPで差し返したりするのが基本。
+単にステローとニーだけでも相手は立つかしゃがむか悩むことになる。
+ただ、それだけではインパクトに弱いので、牽制で2MPや2HPも振っていくといい。あとは垂直とか。
+
+対空は積極的に4HPを狙う。端では6HKも減る。
+
+ステローやニーで触れない距離ではジリジリと距離を詰める。
+相手が大きく下がるようなら弾を撃っていってもいい。
+
+相手がこっちに触れる間合いからは離れたほうがいい。距離を詰めすぎない。
+こっちは中足、大足の外から全然動ける。
 
 サガットは弾を撃つキャラではない。まずは中パン大パンやステロー。
-
-牽制の2MPが強い。全体26Fで隙が小さい。
-まずは強力な牽制で手を出しづらくして、差し返し狙いに2HP、HP、6LKあたりの強い技を当てに行く。
 
 まずは通常技と中ニーが基本。
 ニーはしゃがんでいると持続当てになってガードされても有利になる。
 相手がニーを嫌って立つようなら6LKやHK、中/強ショットが当たりやすくなる。
 
-強ショットは発生12Fで弾速もあるので見てから飛ぶのは難しい。
+強ショットは発生12Fで弾速もあるので見てから飛ぶのは難しい。全体42Fでインパクトを合わせるのも難しい。
 立っていないと当たらないので、ニーで揺さぶって読み合いにする。
 
 通常技は距離によって2LP、2MP、2HP、(MK)、HPを使い分けるのがまず基本。
 
 相手が立っていると強い中/強ショット、ステローと、相手がしゃがんでいると強い中ニーで中・遠距離を制圧する。
 
-相手が下がるなら無理に上がらなくていい。ショットとニーで十分。
+相手が下がるなら無理に上がらなくていい。ショットとニーで十分。ただ、中ニーは届いたほうがいい。
 
-基本的には強ニーが先端当てになり、中強ショットがコンボになる遠めの距離が強い。最遠距離から一歩前くらい。
+基本的には中ニーが先端当てになり、中強ショットがコンボになる遠めの距離が強い。
 端では中強ショットの距離が近くなるので、中ニー先端当ての距離を維持する。
+
+## 差し合いの弱点
 
 見てからインパクトで返される技が多い。
 あと見てからでなくても雑なインパクトに引っかかる技が多い。
@@ -41,24 +52,21 @@
 
 ## 差し込みの選択肢
 
-- 2LP, 弱ショット
-- 2MP
-  - 弱ショット: 無敵技以外で割り込めない、先端ならガードされても-6くらいで大足の外
-  - 中ネクサス: ガードさせて読み合い
-- 2HP
+- **2HP**
   - 弱ショット: 先端ならガードされても連続ガードの-5くらいで大足の外、インパクトを返しやすい
   - 中ニー: 先端なら立ちガードされても-2の投げ間合い、しゃがみなら+2で投げ間合い
-- MK: ヒット確認でTCから状況が良い、インパクトに弱い
-- HP: ドライブゲージを削る
-- 6LK: 下段、カウンターでコンボ
+- **MK**: ヒット確認でTCから状況が良い、インパクトに弱い
+- **HP**: ドライブゲージを削る
+- **6LK**: 下段、カウンターでコンボ
 - DR 2MP
 - DR 強ネクサス: ラッシュを止めようとしてくる相手に差し返し気味に当たる
-- 中ニー: 遠めなら確反がない、しゃがんでいるとガードされても+2で投げ間合い
-- 強ショット: 速い弾
+- **中ニー**: 遠めなら確反がない、しゃがんでいるとガードされても+2で投げ間合い
+- DR 2HK: ガードで-8だけど中足では届かないので差し返したり、大足に確反入れたりを狙う。転んだらラッシュ中下段。
+- **強ショット**: 速い弾
 - 中ショット, 強ショット: 2MP先端キャンセルくらいの距離でもジャンプできない
 - 中ショット, 強ニー: 初期位置くらいの距離で先端当てを狙う、その距離ならジャンプもできない
 
-まずは強ショットが基本で、たまに中ショットで緩急をつける。
+弾は強ショットが基本で、たまに中ショットで緩急をつける。
 それ以外は距離によって使い分ける。
 
 2MPよりLKの方が長いけど、2MPの方が判定が強いし火力も高いので踏み込んで当てる価値はある。
@@ -68,16 +76,20 @@
 ## 牽制の選択肢
 
 - MP: 全体24F、中/強ショットとモーションが似ていてフェイントになる
-- 2MP: 全体26F
+- **2MP**: 全体26F
   - 中ネクサス: 当たったら攻めの状況がいい
   - 強ニー: 当たったらラインを上げられる
+- **弱ショット**: ステローやニーを嫌って牽制してくる相手に外から当てる
 
 2MPの判定がとにかく強い。先端あたりで変な当たり方になる。
 
+牽制の2MPが強い。全体26Fで隙が小さい。
+まずは強力な牽制で手を出しづらくして、差し返し狙いに2HP、HP、6LKあたりの強い技を当てに行く。
+
 ## 差し返しの選択肢
 
-- 2HK: 11F、かなり長い
-- 2MP(pc)-HP: 7F、遅れてもフォローできる
+- **2HK**: 11F、かなり長い
+- **2MP(pc)-HP**: 7F、遅れてもフォローできる
 - 2HP(pc): 11F、強ネクサスが直接入る
 - LK(pc), 強アッパー: 7F、2MPより少し長い、遅れてもフォローできない
 
@@ -92,6 +104,11 @@
 安定は弱アッパーだけど、短いので空ジャンプに注意。当てた後の状況はいい。
 
 ## 守り
+
+ステローとニーの距離が動きやすい。
+近かったらMK/HPからTCで吹き飛ばしたり、弱ニーや大足を積極的に振って有利を取りに行くのもあり。
+
+相手がさらに踏み込んで中パンの間合いになるとあまり動かないほうがいい。LK/2MPの発生が遅くて出し負けやすい。
 
 端でも強ショットやニーが強いし、ステローも強いので、素直にガードで待ってもいい。手を出してこないならコパンや中パンからネクサスでもいいし。
 
