--- a/games/Street-Fighter/差し合いの基本.md
+++ b/games/Street-Fighter/差し合いの基本.md
@@ -1,8 +1,11 @@
-差し合いにおける技は以下の三つに分類できる。
+差し合いにおける読み合いは以下の三つに分類できる。
 
-1. 当て技: 相手が動く前に当てる
-2. 置き技: 相手の動きを止めて、触らせないようにする（動いたところに当たる）
-3. 差し返し技: 相手の空振りや不利な技を見てから返す
+1. 当て技（接触）: 相手が動く前に当てる、ガードでもいい
+2. 置き技（牽制）: 相手の動きを止めて、触らせないようにする（動いたところに当たる）
+3. 差し返し技（確反）: 相手の空振りや不利な技を見てから返す
+
+ただし、読み合いとは別に、対空やラッシュ止めのような「見てから」の行動がある。
+発生が遅い技は代わりに有利が取れる技も多いので、止めないと一方的に攻められる。読みで置くか、見てから止めるか、の違いで置きに近い。
 
 差し合いの目的は、相手よりも先に触ることだ。
 前に歩いて触るか、相手がこちらの攻撃に触るのを待つか、相手の攻撃を見てから返すか、しかない。
