--- a/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットのコンボ.md
@@ -211,7 +211,8 @@ HK(1), 強ノヴァは相手が空中でも使える。
 
 ## {空} 4HP
 
-- {空} 4HP, 強アッパー-h: 3120 (4HP 2ヒットで3320)
+- {空} 4HP(2), 強アッパー-h: 3120
+- {空} 4HP(2), 強アッパー-h, SA3: 5020
 
 ## 6MP(+1)
 
