--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -160,18 +160,29 @@ MP(g)より少し遠い。しかもちょっと位置が変わるだけで距離
 
 端では中央よりも近い。
 
-ラッシュ系の攻め:
+ラッシュ軸:
 
 - DR 2MK(+2): ヒットで+10、ガードで+4で2F歩いて投げが届く
-  - 4HP, 中ショット: 少し離れていてどのキャラにも最速で安定して繋がる
-  - {ガード}, MP
-    - {ヒット}, LP, 中アッパー
-    - {ガード}, 2LP, 弱ショット: -6で立ち小足の間合い
-  - {ガード}, 2MP, 中ネクサス
+  - {ヒット}, 4HP, 中ショット: 少し離れていてどのキャラにも最速で安定して繋がる
+  - {ガード}: +4で投げ間合いの外
+    - MP
+      - {ヒット}, LP, 中アッパー(+1)
+      - {ガード}
+        - 2LP, 2MP, ODネクサス: コパンに差し返し狙い
+        - 2LP, 後退, 2MP, ODネクサス: 中足に差し返し狙い
+    - 2MP, 中ネクサス
+    - 前進(2F): 前投げ
+    - ガード: シミー
+- DR(2-4F) 2MK: 長めに走る、ヒットで+8、ガードで+2の投げ間合い
+  - {ガード}
+    - 前投げ
+    - 後退: シミー
 - DR 前投げ: 目押し
+- DR ガード: -5で投げ間合い
+- DR 強ネクサス: コパンや投げを空振りして当てる
 - DI: 無敵技やDI以外で割り込めない、BOに強い
 
-中ショットを軸とした固め:
+中ショット軸:
 
 - 中ショット: +9、最速しゃがみ攻撃暴れに負ける
 - 6MP: 中段、カウンターでLPが入る
@@ -200,17 +211,36 @@ MPからのガードは立ち→しゃがみのファジーにするとジュリ
 
 ## 後投げ: 21
 
-- 強ショット: 両受け身でジャンプできない
-- {端} 弱ショット: ガードで+3
-- {端} 中ショット: しゃがみに当たらない、ジャンプできない
-  - {ジャンプ}, 6HK: ジャンプに当たると拾える、空振りでもかなり有利なのでチャレンジしていい
-  - {ガード}, 強ショット: ジャンプできない
-  - {ガード}, 中ニー: ガードすると(+8)で当たって+1になる、DI確定
-- {端} OD上ショット: ヒットすると6HKからコンボ、DIは割れてヒットと同じ
+- 強ショット: ジャンプできない、その場受け身はしゃがんでも当たって+9
+  - {後方受け身, ジャンプ}, SA1: 追撃
+  - {その場受け身, ガード, 前方ジャンプ}, HK, 中ショット: 微妙な距離で対空しにくい
+
+基本的には中央でも端でも強ショットでいい。
+
+その他
+
+- 弱ショット: ガードで+3、その場受け身からジャンプできない
+  - {後方受け身, 前方ジャンプ}: +14で大足の外
+    - SA2: 対空、1Fでも遅れると間に合わない
+    - HP: 着地に重なる、DI確定
+    - 中ニー: 着地狙い、DI確定
+    - 弱ショット: ジャンプできない、DI確定
+    - 中ショット: ジャンプできない、しゃがみに当たらない
+- 中ショット: しゃがみに当たらない、その場受け身からジャンプできない
+  - {後方受け身, 前方ジャンプ}, 強アッパー: 対空
+  - {端, ジャンプ}, 6HK: 端で弾がジャンプに当たると拾える、空振りでもかなり有利なのでチャレンジしていい
+  - {ガード}
+    - 強ショット: ジャンプできない
+    - 中ニー: ガードすると(+8)で当たって+1になる、DI確定
+- {端} OD上ショット: ヒットすると6HKからコンボ、DIは割れてヒットと同じ、ジャンプできない
 - {端} DR MP: 目押し
-- {端} 中ニー(+4): ガードすると(+8)で当たって+1になる、DI確定
+- {端} 中ニー(+4): ガードすると(+8)で当たって+1になる、DI確定、ヒットすると弱アッパーで追撃できる
   - 前投げ: 4F遅れ
   - {ガード}, 後退: シミー
+
+端はその場受け身と同じ。
+
+その場受け身は強アッパー-hと近い状況。
 
 前投げと違って、端でもその場受け身くらい離れる。
 
@@ -332,7 +362,7 @@ MP(+3)ルートが強い。シミーも狙える。投げは目押しで。
   - MP: 連続ガード
   - 後退: シミー
 
-4HP, 強ニー, 弱アッパーなどで頻出する。
+4HP, 強ニー, 弱アッパーなどで頻出する。MP(+3)からループするので持続重ねが本命。
 
 ## 中アッパー: 27
 
