--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
@@ -1,9 +1,15 @@
-## 2LP/2LK, 2LP
+## 2LP/2LK, 2LP: 1-5
 
 - ...(g), LP, 弱ショット: 暴れを潰して、ガードされても-5で差し合いに戻る、ジャンプには空中ヒット
 - ...(g), LP, 弱ニー: ニーの下りを当てる、立ちガードされて-1の投げ間合い、弱攻撃と相打ち
 - ...(g), LP, 中ニー: ニーの下りを当てる、立ちガードされて-3の投げ間合い、弱攻撃の外から当たる
 - {立} ...(g), LP, 中ショット, 弱ニー: ニーを警戒して立っていると当たる、長いしゃがみ攻撃に負ける
+
+## 前投げ
+
+端の攻めが強い。
+
+中央ではどちらの受け身に対しても中ショットを重ねて、後方受け身からジャンプには対空する。
 
 ## MP: 3-8
 
@@ -34,6 +40,11 @@
 
 ヒット時はMP, MP, LPも入るけど起き攻めしにくい。MP, LPが基本。端では起き攻めしやすいので火力を出す。
 
+## MP(+2): 7-8
+
+MP(+2), 4HPが繋がる。
+MP, MPに無敵技以外で割り込めない。
+
 ## {端} 中ショット(+1): 16-23
 
 持続当てになる。ヒットでもガードでも同じ硬直。
@@ -60,7 +71,16 @@
 
 ## DR 2MK: 17-21
 
-下段。ヒットすると4HPが入る。
+- DR 2MK(h), 4HP, ...
+- DR 2MK(g): +2
+  - MP: 4F遅れ
+    - {相打ち}, 2MP, ...
+  - 通常投げ
+  - 後退: シミー
+
+下段。ヒットすると4HPが入って、密着ガードから打撃と投げと後退の三択を狙える。
+
+前投げから重ねるとDR 2MK(+2)だけど密着にならない。
 
 ## 6MP(+1): 22-23
 
