--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -41,6 +41,18 @@
 基本的には中ニーが先端当てになり、中強ショットがコンボになる遠めの距離が強い。
 端では中強ショットの距離が近くなるので、中ニー先端当ての距離を維持する。
 
+## 差し合いの距離
+
+初期位置から一歩踏み込んで、ステローの先端がちょうど当たるくらいが動きやすい。
+
+- 4HPや弱アッパーで対空しやすい
+- 6HKをガードされても投げが届きにくい
+- 中ニーをガードされても五分前後
+- 中ニーをガードされても後退で投げを避けやすい
+- 弾に大足が引っかからない
+
+あまり離れすぎると上下段の圧が弱いし、対空しにくい。
+
 ## 差し合いの弱点
 
 見てからインパクトで返される技が多い。
@@ -72,6 +84,7 @@
 2MPよりLKの方が長いけど、2MPの方が判定が強いし火力も高いので踏み込んで当てる価値はある。
 
 弱ニーは使いたくなるけど、不利になりやすいので中ニーの距離まで我慢。弱ニーを狙うならどちらかというとHPと6LK、あとはDR MPやDR 2LPが強い。
+そもそも弱ニーと中ニーで有利を取れる距離があまり変わらないし、弱ニーは届かないと空振りになるし、近すぎると不利になりやすい。中ニーでいい。
 
 ## 牽制の選択肢
 
