--- a/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの練習メニュー.md
@@ -12,45 +12,54 @@
 5. 6LK(c)
 6. 2MP, CR MP, 4HP
 7. {端} MP, MP, LP, 中アッパー
-8. {BO} 2LP, 2MP, 強ニー
-9. 対空: {空} アッパー
-10. 飛び道具
-11. DI(壁)
-12. {端} 前投げ
-13. J.HP, HK, ...
-14. 強アッパー, DR 投げ
-15. {中央} 前投げ
-16. {端} 後投げ
-17. 2MP/2HP, 中/強ネクサス
-18. MK-HK
-19. HP-HK
-20. MP, LP, 中アッパー
-21. 2MP(pc)-HP
-22. {DV}, MP(pc)
-23. 2LP/2LK, LP, 中アッパー
-24. MP, LP, CR 2LP, 4HP
-25. MP, LP, CR 2LP, 2MP, CR MP, 4HP
+8. {BO} 2LP, MP, 2LP/2MP, 弱ニー
+9. {BO} 2MP, 強ニー
+10. 対空: {空} アッパー
+11. 飛び道具
+12. DI(壁)
+13. {端} 前投げ
+14. J.HP, HK, ...
+15. 強アッパー, DR 投げ
+16. {中央} 前投げ
+17. {端} 後投げ
+18. 2MP/2HP, 中/強ネクサス
+19. MK-HK
+20. HP-HK
+21. MP, LP, 中アッパー
+22. 確反: 2MP(pc)-HP
+23. 確反: {DV}, MP(pc)
+24. 2LP/2LK, LP, 中アッパー
+25. MP, LP, CR 2LP, 4HP
+26. MP, LP, CR 2LP, 2MP, CR MP, 4HP
+27. 対空: {空} 6HK
 
 ## 初級
 
-### 飛び道具と対空
+### リターンの高い対空
 
-（ダミー設定 > ガード: すべてガード）
-（反撃設定 > ガードリバーサル: 前方ジャンプ/垂直ジャンプ）
+（対空練習）
 
-- 前進, 中ショット, 強ショット: ジャンプに引っ掛ける
-- 前進, 強ショット, ガード
-  - {垂直ジャンプ}, 強ショット, ガード: 垂直ジャンプを見てからできるだけ早く出す
-  - {前方ジャンプ}, 弱アッパー: 対空
-    - DR 6LK/6MP(g)
-      - {垂直ジャンプ}, 弱アッパー(表)
-      - {前方ジャンプ}, 弱アッパー(裏): 振り向き昇竜
+- {空} 4HP, 強アッパー-h
+  - 強ショット
 
-前進からショットでアッパーが漏れないようにする。
+自分が技を出してない時に狙う、リターンの高い対空。
 
-中強ショットがコンボになる距離を覚える。
+ラッシュやSAが漏れないように練習する。
 
-ガードリバーサルにDIを加えてもいい。
+### 端の攻め
+
+- MP(h), MP, LP, 中アッパー
+  - ステップ
+    - MP, ...
+    - 前投げ: 1-4F遅らせないと空振りになる
+      - DR 2MK
+- MP(g): +2
+  - MP(c/相打ち), 2MP, CR MP, 4HP, 強ニー, 弱アッパー
+    - 2MP: +8
+      - MP(+2)(h), 4HP, 強ニー, 弱アッパー, ...
+      - MP(+2)(g)
+  - MP(h), 2MP
+  -
 
 ### ジャンプ攻撃のコンボ
 
@@ -85,6 +94,37 @@
 
 ## 中級
 
+### 飛び道具と対空
+
+（ダミー設定 > ガード: すべてガード）
+（反撃設定 > ガードリバーサル: 前方ジャンプ/垂直ジャンプ）
+
+- 前進, 中ショット, 強ショット: ジャンプに引っ掛ける
+- 前進, 強ショット, ガード
+  - {垂直ジャンプ}, 強ショット, ガード: 垂直ジャンプを見てからできるだけ早く出す
+  - {前方ジャンプ}, 弱アッパー: 対空
+    - DR 6LK/6MP(g)
+      - {垂直ジャンプ}, 弱アッパー(表)
+      - {前方ジャンプ}, 弱アッパー(裏): 振り向き昇竜
+
+前進からショットでアッパーが漏れないようにする。
+
+中強ショットがコンボになる距離を覚える。
+
+ガードリバーサルにDIを加えてもいい。
+
+### 端の前投げからの攻め
+
+- {端} 前投げ
+  - DR 2MK(h), 4HP, 強ニー, 弱アッパー
+    - 2MP: フレーム消費で+8
+      - MP(+3), 4HP, 強ニー, 弱アッパー, ...
+      - MP(+3)(g), MP, ...
+  - DR 2MK(g)
+    - MP(h), LP, 中アッパー
+      - ステップ, 前投げ, ...
+    - MP(g)
+
 ### 端の前投げからの攻め
 
 - {端} 前投げ
@@ -94,15 +134,6 @@
   - DR 2MK(g)
     - MP(h)
     - MP(g), 2LP,
-
-### リターンの高い対空
-
-（対空練習）
-
-- {空} 4HP, 強アッパー-h
-  - 強ショット
-
-自分が技を出してない時に狙う、リターンの高い対空。
 
 ### ラッシュ中段・下段
 
