--- a/games/Street-Fighter/Six/characters/Marisa/マリーザの対策.md
+++ b/games/Street-Fighter/Six/characters/Marisa/マリーザの対策.md
@@ -48,3 +48,5 @@ https://youtu.be/bFTTlhxbMDc?si=ARTSmR4fnFeFRBZ0
 マリーザのSA1は投げ無敵がないので、SA2が溜まってないなら投げを重ねると対応しづらい。
 
 ファランクスは咎めにくいけど、咎めてくる相手ならジャンプ攻撃の方がまだいい。ファランクスは当ててもあまり痛くない。
+
+2hit技を重ねるとスクトゥムを咎められる。
