--- a/shared/life/死.md
+++ b/shared/life/死.md
@@ -27,3 +27,7 @@ being 持続, doing 変化, having 蓄積が基礎。
 https://x.com/badassceo/status/1111934061788852224
 
 肉体的な死だけが人間の死ではない。
+
+全ての生物は死に向かっている。絶望が先にある。だが、それがどうした？当たり前のことだ。
+
+死にたがりにとって死は希望。つまり、絶望のように見えても希望。死があるからといって絶望しかないわけではない。
