--- a/shared/music/vocal/training/tips/曲を選ぶ.md
+++ b/shared/music/vocal/training/tips/曲を選ぶ.md
@@ -8,6 +8,10 @@
 
 テンポが速い曲は難しい。短く息継ぎしないといけなかったり、舌が回らなかったり、テンポを取るのが難しかったりする。
 
+## 声に合った曲
+
+声に合うというのは、声質の問題と声域の問題がある。
+
 ## その他
 
 歌っている人の特徴的な声を強く押し出すような曲は歌う人を選ぶ。
