--- a/shared/wealth/福祉.md
+++ b/shared/wealth/福祉.md
@@ -32,3 +32,6 @@ Wealth は福利や福祉の意味がある。
 現代では金が常に外から与えられるせいで、価値がある人＝金を稼げる人しか生きていけない。福祉を得られるのは価値がある人だけ。
 
 価値がなくても生きていくためには、奪うか、金を介さずに食糧や住居を手に入れないといけない。しかし、現代ではほとんどの土地が国に支配されている。
+
+福祉が強くなれば絶望もまた強くなる。
+そうではなく、自らが強くならなければならない。最後に頼れるのは自分しかいない。
