--- a/shared/choice/value/価値.md
+++ b/shared/choice/value/価値.md
@@ -256,3 +256,6 @@ Not for you.
 使用価値だけでなく、交換価値もある。
 
 珍しく価値があるものを奇貨と呼ぶ。「奇貨居くべし」は中国の諺で、珍しいものは役に立つことがあるので手元に置いておくこと、という意味。
+
+価値のない人間はほとんどいない。全く人と関わらずに生きるのが難しい以上、ほとんどの人間は経済を回している。
+ただ、価値があっても害があるなら殺す場合がある。
