--- a/shared/education/tips/禁忌とエロス.md
+++ b/shared/education/tips/禁忌とエロス.md
@@ -21,3 +21,5 @@
 禁じられたことを破る、秘められたことを暴くところにエロスがある。だから、姓が大っぴらにされるべきではないと思ってる。
 
 性的なものは全く恥ずべきことではないけど、意図的に隠すことでエロスが生じる。一種の魅力として、性的なもの、特に異性の価値を高める。意図せずに感情だけで「性的なものはダメ」と考えるのは知能が低い。
+
+『炎炎ノ消防隊』32巻ですけべがダメだと喚いてた女が息子にも「自我を持たないモブ」と認識されて消えるの風刺が効きすぎてる。
