--- a/shared/music/vocal/training/tips/曲を覚える.md
+++ b/shared/music/vocal/training/tips/曲を覚える.md
@@ -108,3 +108,7 @@
 腹以外の息は使わない。息は横隔膜を下げて支える。
 
 曲を覚えてリズムやメロディを合わせるのに余裕が出てきたら、フレーズの終わりの処理やブレスの処理とか細かく詰めていきたいところ。完璧にこそ感動がある。
+
+曲を覚える段階では録音を聴いて、リズムやメロディがうろ覚えなところをメモして、重点的に修正する。
+
+一曲の精度を上げていく場合、まずは曲を覚えて普通に歌えるのが大事。原曲通りというよりは地声で楽に歌う。キーも調整する。そのあとはアレンジの段階に入る。
