--- a/shared/decision/information/情報.md
+++ b/shared/decision/information/情報.md
@@ -185,3 +185,5 @@ https://share.google/qJIl8gO83xEZQZjbk
 頭の悪い人が情報を持っていてもどうせまともな判断はできない。まずは自分の愚かさを理解するだけの頭が必要だけどそれもない。
 
 それを得てリスクが下がらないなら、情報ではなく嘘と呼ぶ。
+
+情報を簡単に得られるのに全部得る前に考え始める人はあんまり仕事できなそう。ゲーム実況とか見てると話を全部聞く前に考察を始める人がたまにいる。
