--- a/shared/music/vocal/training/tips/リズムを取る.md
+++ b/shared/music/vocal/training/tips/リズムを取る.md
@@ -73,3 +73,5 @@ BPM 150とかになるとまず8拍で手拍子するのが困難。腕もげる
 
 腹から声を出せば自然と息のリズムは体のリズムに合う。
 まぁ、滑舌が悪いと発声はズレちゃうけど、アクセント自体はズレない。
+
+体でリズムをとって、体のリズムで息を吐いて、その息でしか声を出さなければ、勝手にリズムが取れる。
