--- a/shared/music/vocal/training/tips/曲を覚える.md
+++ b/shared/music/vocal/training/tips/曲を覚える.md
@@ -112,3 +112,5 @@
 曲を覚える段階では録音を聴いて、リズムやメロディがうろ覚えなところをメモして、重点的に修正する。
 
 一曲の精度を上げていく場合、まずは曲を覚えて普通に歌えるのが大事。原曲通りというよりは地声で楽に歌う。キーも調整する。そのあとはアレンジの段階に入る。
+
+おふざけみたいな曲ほど仕上げておかないと格好がつかない。
