--- a/shared/music/vocal/歌の技術.md
+++ b/shared/music/vocal/歌の技術.md
@@ -15,3 +15,9 @@
 単に声の違い。ただ、声域が狭いと歌える曲の範囲は狭まる。キーを変えないと歌えない曲があるとか、下にも広いとキーを変えても歌えない。
 
 歌が上手くなる以前に、良い声でシンプルに歌うのが重要。
+
+- 声のテンションの上げ下げ
+- 息の強さの上げ下げ
+- 一定のアクセント
+
+はまず基本。スムーズに。
