--- a/shared/thinking/悩み.md
+++ b/shared/thinking/悩み.md
@@ -24,3 +24,5 @@
 
 自分で解決できないことで悩んでも意味がない。
 逆に、政治とか、自分で少しでも影響を与えられることは悩んだり動いたりした方がいい。
+
+「悩んでるなら、とりあえず持っといた方がいいですよ！その方が好きなだけ悩めるでしょう？」『スケアリー・キャンパス・カレッジ・ユニバーシティ』
