--- a/shared/voice/training/tips/声帯を鍛える.md
+++ b/shared/voice/training/tips/声帯を鍛える.md
@@ -62,3 +62,5 @@ https://youtu.be/53jjV6YaZvw?si=csTH61ZZZ6hcrujw
 声帯の伸び縮みを感じた状態で、ピッチを2度の間で上下させる。声帯のストレッチ。
 
 声帯を伸ばす筋肉を鍛えるなら、喉仏の下が筋肉痛にならないとおかしい。特に顎の下や舌が痛くなるのは変。
+
+声帯の動きが悪いとピッチが変わるところで間に合わなくて走ったり遅れたりする。早めに変えようとすると走るし、原曲通りだと遅れる。
