--- a/shared/collaboration/organization/組織.md
+++ b/shared/collaboration/organization/組織.md
@@ -172,3 +172,5 @@ https://diamond.jp/articles/-/49655
 内部を管理しすぎると外敵に弱くなる。
 
 エンゲージメントが高い人と低い人は組織の中で分離しないといけない。人間は低きに流れる。能力はそうそう落ちないけど、エンゲージメントは簡単に落ちる。
+
+組織行動の最小単位はツーマンセル。小さなチームを作って動く。誰か一人でも単独で動くのは組織的とは言えない。
