--- a/shared/engagement/エンゲージメント.md
+++ b/shared/engagement/エンゲージメント.md
@@ -325,3 +325,5 @@ engagementはcommunicationや trustと関わりが深い。
 エンゲージメントを生む要素は複数ある。楽しみもそうだし、報酬も。
 
 先に借りがあるから相手のために何かする、というのはコミュニティとは違うけど、エンゲージメントではある。
+
+お祭りや仕事などに嫌々参加して「手伝ってやってる」と感じているとエンゲージメントは低い。エンゲージメントのためには、主催者側も参加者が誇りを持てるような価値を示さないといけない。
