--- a/shared/training/練習.md
+++ b/shared/training/練習.md
@@ -336,3 +336,5 @@ https://m.twitch.tv/videos/1991942489?desktop-redirect=true
 
 練習の質とは、対象の習慣や負荷により慣れること。
 ただ、練習の質が高くても、その行動自体がぬるいとぬるい行動に慣れるだけ。まず学習が必要。
+
+慣れたことを繰り返していても練習にならない。より複雑なこと、より負荷がかかること、やったことがないこと、を試さないといけない。
