--- a/shared/government/democracy/代議士.md
+++ b/shared/government/democracy/代議士.md
@@ -15,3 +15,5 @@
 
 国民は経済や外交のプロではない。
 なぜ助けてほしいのかは意見を聞いても、方法は専門家を頼るべき。
+
+代議士というのはそもそも有権者の生活を良くすることを仕事にしている人たちなので、賄賂がどうのこうの言うのは間違っている。そもそもが票をもらうこと自体賄賂だ。
