--- a/shared/music/vocal/training/tips/リズムを取る.md
+++ b/shared/music/vocal/training/tips/リズムを取る.md
@@ -75,3 +75,5 @@ BPM 150とかになるとまず8拍で手拍子するのが困難。腕もげる
 まぁ、滑舌が悪いと発声はズレちゃうけど、アクセント自体はズレない。
 
 体でリズムをとって、体のリズムで息を吐いて、その息でしか声を出さなければ、勝手にリズムが取れる。
+
+「起こり」があるとリズムは取りやすい。
