--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -130,7 +130,10 @@ MP(g)より少し近い。
 ## 2HK: 29
 
 - DR 6LK/6MP
-- ステップ, 2MP, 中ネクサス: 最遠距離だと届かないこともある
+- DR 投げ: 近いと重なる。遠いと最大で10F遅れくらい。
+- ステップ: +6
+  - 2MK: とりあえず重ねる
+  - 2MP, 中ネクサス: 最遠距離だと届かないこともある
 
 ## 2HK(pc): 45
 
@@ -391,6 +394,9 @@ MP, MP, LPなど遠目で当たると(+1)になる。
 - DR 6MP: 5F遅れ
 - DR 投げ
 - {端} (中アッパーと同じ)
+- ステップ: +4で投げ間合いの外、端やその場受け身にはド密着
+  - 2MP, 中ネクサス: とりあえず触って読み合い
+  - ガード
 
 中アッパーよりも近くに落ちて、後方受け身にもラッシュ投げが届く。
 
