--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -1,101 +1,9 @@
-## 3-5F
+## 2-5F
 
 - MP
 - 前投げ
 - バクステ, {通常投げ}, 2MP: シミー
 - ガード: 様子見
-
-## MK(g): -3
-
-- ガード
-- ...-HK: TC、無敵技以外で割り込めない
-
-## MP(g): 2
-
-投げ間合いの外。
-
-MP(g), MP(h), LPは届かないので、MP(g), MPルートにするなら2MPしかない。
-
-## DR MP(g): 6
-
-- MP(g): 連続ガード。2LP, 2MPまでは届く、コンボは単発確認で
-  - MP: 相打ちから2HPが届く、リュウなどは繋がる
-    - 2MP, 弱ショット: Dゲージを2本削る
-    - 2HP, 強ネクサス: 弱攻撃を潰してパニカン
-  - 後退: 様子見
-- 通常投げ: 最速は空振りするので目押しで遅らせる。
-- 後退
-
-連続ガードになるMPで固めるのが基本。
-
-## {空} DR 2MP-HP, 強アッパー: 28
-
-- DR 6LK: 下段
-- DR 6MP: 中段、4F遅れ
-
-## {空} DR 2MP-HP, 強ニー: 42
-
-- {端} J.HP: 詐欺飛びでガードされて+15
-
-## 2MP(g), CR MP: 6
-
-- 2MP(g), CR MP: 連続ガード
-
-2MPラッシュからMP3回、2MPショットが2本削れるので基本的にやり得。
-
-## DR 6MP(g): 2
-
-- MP(c), 2MP, ...: 相打ちも同じ。
-- MP(h), LP, ...: 中アッパーは(+1)になる
-- MP(g), LP, 弱ショット: -6で大足の外。
-
-MP(g)より少し近い。
-
-## {遠} 2HP(g)
-
-- 強ネクサス: 9F遅れ、短い技を潰す
-- ODネクサス: 4F遅れ、遅い技を潰す
-- 弱ショット: 連続ガード、-5くらいで大足の外
-
-## DR 6LK(g): 1
-
-- 2LP, LP, 弱ショット: -7で大足の外。
-- 2LP, LP, 弱ネクサス
-  - マイト, ガード: ヒットしても投げ間合いの外。
-- 投げ: 4F遅れ。
-
-投げ間合い。
-
-## MK(g): -3
-
-- MK(g)-HK: 無敵技以外で割り込めないが、ガードされると-8
-
-## {屈} 弱ニー(+10): 2
-
-- 2LP/2LK, LP, 弱ニー
-
-投げ間合いの外。
-ニーの下りが当たる間合いで相手がしゃがんでいると持続当てになる。立っていると-3で投げ間合い。
-
-## 中ニー(+7)(g): 0-3
-
-近いと投げ間合い、(+10)は投げ間合いの外。
-
-相手がしゃがんでいると近くても(+9)以上。2F有利。(+10)の時は遠距離と同じ。
-
-## {BO} ODニー(g): 2
-
-- 投げ
-- 後退: シミー
-
-## ノヴァ(g): 2
-
-投げ間合い。
-
-## 2MP-HK: 32
-
-- DR 6MP
-- 強ニー(+3): 立ちガードで-2、しゃがみガードで+4の投げ間合い、当たって+40
 
 ## HP-HK: 39
 
@@ -110,15 +18,6 @@ MP(g)より少し近い。
 
 中央でラッシュしてもパリィに弱いので、とりあえず中ショットでもいい。
 
-## 4HP, 強ニー, 弱アッパー: 34
-
-- DR 6MP(+2): 中央では少し遠めだが2MPが繋がる
-
-## 6LK: 3
-
-- {近} MP: めり込んだらとりあえずMPが使いやすい
-- 2MP: ガードさせて中ネクサスや弱ショット
-
 ## MK-HK: 38
 
 - DR 6LK/6MP
@@ -126,6 +25,24 @@ MP(g)より少し近い。
 - {端} DR 投げ: その場受け身なら中央でも可
 - 強ニー(+9): ガードされて+4、端かその場受け身には投げ間合い
 - {端} 2LP, 中ショット(+8): 最速しゃがみ攻撃暴れには負ける
+
+## {空} DR 2MP-HP, 強アッパー: 28
+
+- DR 6LK: 下段
+- DR 6MP: 中段、4F遅れ
+
+## {空} DR 2MP-HP, 強ニー: 42
+
+- {端} J.HP: 詐欺飛びでガードされて+15
+  - {ガード}, HK, 弱ネクサス: 連続ガードで1.2本削って読み合い、派生技で1.5本削り、1本以下でBOしたらマイトまで連続ガード
+
+## 2MP-HK: 32
+
+- DR 6MP
+- DR 6LK: 目押し
+- 強ニー(+3): 立ちガードで-2、しゃがみガードで+4の投げ間合い、当たって+40
+
+基本的にSAでキャンセルするが、出なかったらフォローする。
 
 ## 2HK: 29
 
@@ -142,22 +59,48 @@ MP(g)より少し近い。
   - 6MP(+1): ヒットで2LP, LPが入る、ガードで-1
   - 中ショット(+7): 端ではガードさせて投げ間合いとシミー
 
-## 6HK: 4
+## 4HP, 強ニー, 弱アッパー: 34
+
+- DR 6MP(+2): 中央では少し遠めだが2MPが繋がる、端では4HPが繋がる。
+
+## 6HK(g): 4
 
 - 2MP, 中ネクサス
 
-MP(g)より少し遠い。しかもちょっと位置が変わるだけで距離が変わる。2MPが無難。
+MP(g)より少し遠い。しかもちょっと位置が変わるだけで距離が変わる。2MPが無難。起き攻めでたまに使う。
 
 ## {空} 6HK: 47-50
 
 - DR: 目押しでなんでも重なる
 
-## {中央} 前投げ: 21
+基本的には追撃できる場面で狙った方がいい。
 
-- 強ショット: 両受け身でジャンプできない
-- 中ショット: その場受け身でジャンプできない、後方受け身で垂直ジャンプできない
+強ノヴァ, 6HKは+48で、ステップ2回で密着+2になる。
+
+## {中央} 前投げ/後投げ: 21
+
+- 強ショット: その場受け身はしゃがみ攻撃を出さないと当たって+9、後方受け身でもジャンプできない
+  - {後方受け身, ジャンプ}, SA1: 追撃
   - {後方受け身, 前方ジャンプ}, 強アッパー(+3): 対空
   - {後方受け身, 垂直ジャンプ}, OD上ショット, SA1: 追撃
+  - {その場受け身, ガード}: +9、しゃがみガードでも当たる
+    - 前進: 対空しやすい距離に進む
+- 弱ショット: ガードで+3、その場受け身からジャンプできない
+  - {後方受け身, 前方ジャンプ}: +14で大足の外
+    - SA2: 対空、1Fでも遅れると間に合わない
+    - HP: 着地に重なる、DI確定
+    - 中ニー: 着地狙い、DI確定
+    - 弱ショット: ジャンプできない、DI確定
+    - 中ショット: ジャンプできない、しゃがみに当たらない
+- 中ショット: しゃがみに当たらない、その場受け身からジャンプできない
+  - {後方受け身, 前方ジャンプ}, 強アッパー: 対空
+  - {端, ジャンプ}, 6HK: 端で弾がジャンプに当たると拾える、空振りでもかなり有利なのでチャレンジしていい
+  - {ガード}
+    - 強ショット: ジャンプできない
+    - 中ニー: ガードすると(+8)で当たって+1になる、DI確定
+
+前投げと後投げで同じ距離。
+基本的に強ショットでいい。その場受け身から無敵技が届くキャラも限られている。
 
 ## {端} 前投げ: 21
 
@@ -187,7 +130,7 @@ MP(g)より少し遠い。しかもちょっと位置が変わるだけで距離
 
 中ショット軸:
 
-- 中ショット: +9、最速しゃがみ攻撃暴れに負ける
+- 中ショット: +9、最速しゃがみ中攻撃暴れに負ける
 - 6MP: 中段、カウンターでLPが入る
   - {ヒット/ガード}, 2MP: コパンを外から潰す
 - MP: フェイントで様子見、-3で中足の外、しゃがむとジュリだけ中足ラッシュが届く
@@ -212,29 +155,14 @@ MPからのガードは立ち→しゃがみのファジーにするとジュリ
 
 ラッシュすると無敵技確定。2LPや後退で止まっても-5。
 
-## 後投げ: 21
+## {端} 後投げ: 21
 
-- 強ショット: ジャンプできない、その場受け身はしゃがんでも当たって+9
-  - {後方受け身, ジャンプ}, SA1: 追撃
-  - {その場受け身, ガード, 前方ジャンプ}, HK, 中ショット: 微妙な距離で対空しにくい
+端はその場受け身と同じ。
 
 基本的には中央でも端でも強ショットでいい。
 
 その他
 
-- 弱ショット: ガードで+3、その場受け身からジャンプできない
-  - {後方受け身, 前方ジャンプ}: +14で大足の外
-    - SA2: 対空、1Fでも遅れると間に合わない
-    - HP: 着地に重なる、DI確定
-    - 中ニー: 着地狙い、DI確定
-    - 弱ショット: ジャンプできない、DI確定
-    - 中ショット: ジャンプできない、しゃがみに当たらない
-- 中ショット: しゃがみに当たらない、その場受け身からジャンプできない
-  - {後方受け身, 前方ジャンプ}, 強アッパー: 対空
-  - {端, ジャンプ}, 6HK: 端で弾がジャンプに当たると拾える、空振りでもかなり有利なのでチャレンジしていい
-  - {ガード}
-    - 強ショット: ジャンプできない
-    - 中ニー: ガードすると(+8)で当たって+1になる、DI確定
 - {端} OD上ショット: ヒットすると6HKからコンボ、DIは割れてヒットと同じ、ジャンプできない
 - {端} DR MP: 目押し
 - {端} 中ニー(+4): ガードすると(+8)で当たって+1になる、DI確定、ヒットすると弱アッパーで追撃できる
@@ -250,101 +178,6 @@ MPからのガードは立ち→しゃがみのファジーにするとジュリ
 ショットを重ねてもOD無敵技が届かない。
 本田のOD頭突きは弱ショットだけ確定するが、それ以外はガードできる。
 突進モーションが入るSAは大体届くが、弾無敵がなければ潰せる。
-
-## {立} 中ショット(g): 3
-
-J.HP, 4HP, 中ショットなどで繋いでも密着できる。
-
-- {中央} 2MP, 弱ショット: 大足の外
-- {端} MP: 単発で確認してLPに繋ぐ
-- {端} 前投げ
-
-## キャンセルネクサスの読み合い
-
-弱/中ネクサスは発生が早く、ガードされて-5なので基本的にはマイトかグリードに派生する。
-通常技かしゃがみガードにはマイトが、インパクトか立ちガードにはグリードが勝てる。
-ノヴァはあまり意味がない。
-ヒットしたらマイトが基本だけど、端では立ち確認してグリードから追撃の方が高い。
-
-強/ODはガードされて-3だが発生が遅い。
-
-マイトで通常技を潰してカウンターになるとダウンになるのでそれも判別しないといけない。
-ガード方法をランダムにして練習する。
-
-2MP/2HP/4HP/HKからは中ネクサスまで無敵技以外で割り込めない。
-
-## ネクサスの読み合い
-
-上位帯だと基本的にマイトを警戒してくる場合が多い。パリィとか、基本立ってくる。グリードが中心。
-ただ、グリードはリスクも大きいので、あえてノヴァを混ぜるのもいい。
-
-## 弱/中ネクサス(g): -5
-
-- マイト: 暴れ潰し
-- グリード: 4F遅れ、しゃがみに当たらない、インパクトを返せる
-- ノヴァ: 9F遅れ
-
-## 強/ODネクサス(g): -3
-
-- マイト: 中段、無敵技以外で割り込めない、インパクトを返せる
-- グリード: しゃがみに当たらない、無敵技以外で割り込めない、インパクトを返せる
-- ノヴァ: 7F遅れ
-- ガード: 投げ間合い
-
-## マイト: 3
-
-近いとド密着。最低でも投げ間合いにはなる。
-
-## マイト(c): 25
-
-- ステップ: +2の投げ間合い
-  - バクステ, {通常投げ}, 2MP: シミー
-
-## {立} グリード(g): 4
-
-投げ間合い。
-
-- 後退: シミー
-
-## {立} グリード: 48
-
-- 中ニー: +2の投げ間合い
-  - {後方受け身}, 後退: シミー
-- 弱ニー: +6で後方受け身には投げ間合いの外
-
-端では持続当ても狙えるけど、基本的には追撃したほうがいい。
-
-## {空} グリード: 51
-
-ネクサスカウンターヒットなどから当たった場合は空中ヒットになる。
-
-## {空} マイト(c): 25
-
-- 中ニー(+8): ガードされて+1の投げ間合い
-
-## ノヴァ(g): 2
-
-- 後退: シミー
-
-## ノヴァ
-
-4HP, 強アッパー-hで締めるか、強アッパーで締めるのがおすすめ。
-
-## ノヴァ, 6HK: 48
-
-- 中ニー: +2で投げ間合い
-- 弱ニー: +6で投げ間合いの外
-- ステップ, 中ニー(+8)
-- ステップ 2回: +2
-
-強アッパーからラッシュが強いので、使うのはBOの時くらい。
-
-## ノヴァ, 強アッパー: 28
-
-- DR 6LK: 下段
-- DR 6MP: 5F遅れ、中段
-- DR 投げ: 目押し
-- 強ネクサス: 後方受け身にはカス当たりでヒット確認が難しい
 
 ## 弱アッパー: 32
 
@@ -423,6 +256,17 @@ DIがギリギリ届かない。
 - 強ニー(+7): ガードでも+2で投げ間合い
 - 2MP, 2MK(+2): ガードで五分、ヒットで+6
 
+## 弱ニー(+10)(g): 2
+
+- 2LP/2LK, LP, 弱ニー
+- MP, LP, 弱ニー: おかわり。立ちガードしても-1
+- ガード: 投げ間合いの外で様子見
+
+投げ間合いの外。
+
+相手がしゃがんでいると下りは必ず(+10)で当たるので、しゃがみ確認で狙うのが基本。
+上りで当たるとしゃがんでいても-8なので注意。
+
 ## 中ニー: 39
 
 - DR 6LK/MP/6MP/2MK/投げ: 目押し
@@ -431,6 +275,23 @@ DIがギリギリ届かない。
 
 中ショットでもその場受け身に重ならない。
 
+## 中ニー(+9)(g): 2
+
+- MP: 4F遅れ、相打ちで2MPが入る
+- 通常投げ
+- 後退: シミー
+
+投げ間合いで後退がシミーになる。
+
+相手がしゃがんでいると下りは必ず(+9)で当たる。しゃがみ確認で狙うのが基本。
+上りで当たるとしゃがんでいても-7なので注意。
+
+## 中ニー(+10)(g): 3
+
+投げ間合いの外。
+
+距離で持続当てになる場合は判別できないので、基本的に打撃か後退が無難。
+
 ## 強ニー: 41-47
 
 - DR 6LK/6MP: 中下段。後方受け身でも2MPが届く。
@@ -438,6 +299,12 @@ DIがギリギリ届かない。
 - {中央} 中ショット
 
 ラッシュ投げが後方受け身に届かない。起き攻めは中の方が強い。
+
+## 強ニー(+4)(g): 4
+
+後退がシミーになる投げ間合い。
+
+相手がしゃがんでいると近くても(+9)固定。
 
 ## 強ニー(+5)(g): 0-5
 
@@ -451,6 +318,113 @@ DIがギリギリ届かない。
 ## ODニー: 66
 
 端では追撃できる。
+
+## {BO} ODニー(g): 2
+
+- 投げ
+- 後退: シミー
+
+## キャンセルネクサスの読み合い
+
+弱/中ネクサスは発生が早く、ガードされて-5なので基本的にはマイトかグリードに派生する。
+通常技かしゃがみガードにはマイトが、インパクトか立ちガードにはグリードが勝てる。
+ノヴァはあまり意味がない。
+ヒットしたらマイトが基本だけど、端では立ち確認してグリードから追撃の方が高い。
+
+強/ODはガードされて-3だが発生が遅い。
+
+マイトで通常技を潰してカウンターになるとダウンになるのでそれも判別しないといけない。
+ガード方法をランダムにして練習する。
+
+2MP/2HP/4HP/HKからは中ネクサスまで無敵技以外で割り込めない。
+
+## ネクサスの読み合い
+
+どの派生もリスクはある。
+上位帯だと基本的にマイトを警戒してくる場合が多いので、グリードが軸。
+
+グリードは削りも大きい。0.7本くらい削る。
+ただ、グリードは空振りするとなんでも入るし、弱/中ネクサスの場合は割り込める。
+
+暴れやしゃがみを選ぶ相手はマイトで崩す。
+ガードされても-5なので、リスクも低い。
+
+ガードしてから動こうとする相手にはノヴァでもいい。
+発生は遅いが、マイトをガードしてグリードに潰されないタイミングなら弱攻撃しか押せない。
+弱/中ネクサスからはノヴァが繋がらないが、無敵技以外で割り込めないのでダブルアップを狙うのもあり。ガードされても後退がシミーになる投げ間合いで+2だし。
+
+## 弱/中ネクサス(g): -5
+
+- マイト: 暴れ潰し
+- グリード: 4F遅れ、しゃがみに当たらない、インパクトを返せる
+- ノヴァ: 9F遅れ
+
+## 強/ODネクサス(g): -3
+
+- マイト: 中段、無敵技以外で割り込めない、インパクトを返せる
+- グリード: しゃがみに当たらない、無敵技以外で割り込めない、インパクトを返せる
+- ノヴァ: 7F遅れ
+- ガード: 投げ間合い
+
+## マイト: 3
+
+近いとド密着。ほとんどの場合、投げ間合いにはなる。
+
+## マイト(c): 25
+
+- ステップ: +2の投げ間合い
+  - バクステ, {通常投げ}, 2MP: シミー
+
+## {立} グリード(g): 4
+
+後退がシミーになる投げ間合い。
+
+## {立} グリード: 48
+
+- 中ニー: +2の投げ間合い
+  - {後方受け身}, 後退: シミー
+- 弱ニー: +6で後方受け身には投げ間合いの外
+
+端では持続当ても狙えるけど、基本的には追撃したほうがいい。
+
+## {空} マイト(c): 25
+
+- 中ニー(+8): ガードされて+1の投げ間合い
+- ステップ: +2、ド密着
+  - バクステ: シミー
+
+強ネクサス先端当てからだとステップしても投げ間合いにならないことがあるので注意。
+
+## ノヴァがヒットした場合の選択
+
+({中央} DR) 4HP, 強アッパー-hで締めるか、強アッパーで締めるのがおすすめ。
+6HKはノーゲージで後退がシミーになる投げ間合いになるので起き攻め重視。ただ、ダメージは強アッパーより300くらい下がる。ゲージを使うなら強アッパーでいい。安全に攻めるならDR 4HP, 強アッパー-hでいい。
+SA2-2やSA3も状況がいい。
+
+## ノヴァ, 6HK: 48
+
+- 中ニー: +2
+  - {その場受け身}: ド密着
+  - {後方受け身}: 後退がシミーになる投げ間合い
+- ステップ 2回: +2、両受け身にド密着
+- ステップ, 中ニー(+8)
+
+端では強アッパーやSA1が強いので使わない。
+
+中央でもゲージを使うなら強アッパー締めが強い。
+
+## ノヴァ, 強アッパー: 28
+
+- DR 6LK: 下段
+- DR 6MP: 4F遅れ、中段
+- DR 投げ: 目押し
+- 強ネクサス: 後方受け身にはカス当たりでヒット確認が難しい
+
+## ノヴァ(g): 2
+
+後退がシミーになる投げ間合い。
+
+弱/中ネクサスヒットからガードさせてもいい。
 
 ## SA1: 22
 
@@ -487,4 +461,9 @@ DIがギリギリ届かない。
 
 ## メモ
 
+サガットは足が遅いけど、後退がシミーになる投げ間合いを作れる状況が結構ある。
+ただ、後退がシミーになる+2だとMP, MP, LPは届かない。MPで確認。
+
 ノヴァ, 弱ニーは中央で+42、端で+41だけど、ダメージが低すぎるので使わない。
+
+中ショット(g)は+3だけど、密着で中ショットを当てるってことは起き攻め以外でないので、攻めの選択肢の方にまとめる。
