--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの選択肢.md
@@ -5,13 +5,13 @@
 - ...(g), LP, 中ニー: ニーの下りを当てる、立ちガードされて-3の投げ間合い、弱攻撃の外から当たる
 - {立} ...(g), LP, 中ショット, 弱ニー: ニーを警戒して立っていると当たる、長いしゃがみ攻撃に負ける
 
-## 前投げ
+## 前投げ: 2-5 (ガードは4まで)
 
 端の攻めが強い。
 
 中央ではどちらの受け身に対しても中ショットを重ねて、後方受け身からジャンプには対空する。
 
-## MP: 3-8
+## MP: 2-8
 
 - MP(c), 4HP/2MP, ...
 - MP(h)
@@ -28,30 +28,44 @@
       - 弱ニー(+6): 立ちガードされて-2の投げ間合い
       - {端} 2MP, ODニー: 弱攻撃を潰して、中攻撃以上は相打ち以上
       - ガード: 差し返し狙い
-  - MP(g)
+  - MP: 相打ちで2MPが繋がる
+    - {相打ち} 2MP
     - {ガード} 2MP: 短い技を潰す、カウンターで繋がる
     - {ガード} 後退(3-8F), 2MP, CR MP: 差し返し気味に当ててラッシュ
     - {ガード} 後退(), 2HP, 強ネクサス: パニカンになると繋がる
-    - {相打ち} MK: 暴れ潰し
-  - MP(相打ち), 2MP, ...
 - MP(c), 4HP
+
+相打ちになってもコンボになるので+2から重ねてもいい。
 
 ガードされても+2で状況がいい。
 
+MP(g), MP(h), LPは届かないので、MP(g), MPルートにするなら2MPしかない。
+
 ヒット時はMP, MP, LPも入るけど起き攻めしにくい。MP, LPが基本。端では起き攻めしやすいので火力を出す。
+
+## MP(+1): 6
+
+MP, MPに無敵技以外で割り込めない。
+ヒットすると2MPが繋がる。ただ、そこまで変わらないので基本的にはMP, MPでいい。CRで伸ばすなら2MPの方がいい。
 
 ## MP(+2): 7-8
 
-MP(+2), 4HPが繋がる。
-MP, MPに無敵技以外で割り込めない。
+ヒットすると4HPが繋がる。
 
-## {端} 中ショット(+1): 16-23
+## DR MP: 14-19
 
-持続当てになる。ヒットでもガードでも同じ硬直。
+- DR MP(g): +6で密着
+  - MP(g): 連続ガード。2LP, 2MPまでは届く、コンボは単発確認で
+    - MP: 相打ちから2HPが届く、リュウなどは繋がる
+      - 2MP, 弱ショット: Dゲージを2本削る
+      - 2HP, 強ネクサス: 弱攻撃を潰してパニカン
+    - 後退: 様子見
+  - 通常投げ: 最速は空振りするので目押しで遅らせる。
+  - 後退
 
-(+1)なら2LPまでだが、(+3)からはMP, LPが入るし、(+5)からは4HPが入る。
+連続ガードになるMPで固めるのが基本。
 
-ヒットストップが短くて確認が難しい。
+2MPラッシュからMP3回、2MPショットが2本削れるので基本的にやり得。
 
 ## DR 2MP: 15-18
 
@@ -68,6 +82,15 @@ MP, MPに無敵技以外で割り込めない。
 ガードからの打撃はMPでもいいし、2MPかHPタゲコンで4F遅れから2MPや4HPが繋がる。
 
 基本的には密着したほうがいいけど、差し合いで遠目から強ネクサスで止まるパターンとの択でもいい。
+
+## {端} 中ショット(+1): 16-23
+
+持続当てになる。ヒットでもガードでも同じ硬直。
+相手がしゃがみ攻撃を最速で出すと負ける。
+
+(+1)なら2LPまでだが、(+3)からはMP, LPが入るし、(+5)からは4HPが入る。
+
+ヒットストップが短くて確認が難しい。
 
 ## DR 2MK: 17-21
 
@@ -87,48 +110,70 @@ MP, MPに無敵技以外で割り込めない。
 ド密着ならヒットで2LP, LPが繋がる。
 遠目でも(+2)ならLP, 中アッパーが安定。
 
-## DR 6MP: 30-34
+## 弱ニー(+10): 23
 
-- DR 6MP(g): +2で投げ間合いの外
-  - 2LP, LP, 弱ショット: -5で大足の外
-  - MP(c/相打ち), 2MP, ...
-  - MP(g): 4F遅れ、相打ちで2MPが入る
-    - LP/2LP, 弱ショット: -5で大足の外
-    - LP/2LP, 弱ニー(+7): 立ちガードでも-1
-    - 2LP, 後退: 中足を避けて差し返し狙い
-    - 2MP, 中ネクサス:
-    - 後退
-  - 2LK, 2LP, 弱ニー
+ガードされても+2で投げ間合いの外。
+特に端では弱アッパーで追撃できる。
 
-中央ではDR 6MP, MP, LP, 中アッパーだと遠くて起き攻めしづらいので、ヒットしたらDR 6MP, 2MPルートがベスト。
-端ではMPルートの方が火力が出る。
-
-## DR 6LK: 26-30
-
-- DR 6LK(g): +1で投げ間合い
-  - 2LP, LP/2LP, 弱ショット: -7で大足の外、無敵技以外で割り込めない、ヒットしたら中アッパーにしたい
-  - 2LP 2回
-    - 2MP: 2MPで弱攻撃を外から潰す、8F遅れ
-  - 通常投げ: 4F遅れ
-  - 後退: シミー
-
-下段。遠めの起き攻めでよく使う。めり込んだら投げ間合いギリギリ。
-
-## 弱ニー(+8): 21-23
-
-ガードされても五分以上。
+- {ヒット}
+  - {端} 弱アッパー
+- {ガード}: +2で投げ間合いの外
+  - MP: 固めてヒット確認
+    - {ヒット}, LP, 中アッパー(+2)
+    - {ガード}
+      - LP, 弱ショット
+      - 後退, 2MP: 差し返し気味に触る
+  - 2LK, LP: 固めてヒット確認、下段
+  - ガード
 
 ## 中ニー(+7): 24-27
 
 ガードされても五分以上。端ではヒットすると追撃できる。
 
-## 強ニー(+5): 34-39
+## DR 6LK: 26-30
 
-ガードされても五分以上。端ではヒットすると追撃できる。
+- DR 6LK(h), 2MP
+- DR 6LK(g): +1で後退がシミーになる投げ間合い
+  - 2LP, LP, 弱ショット: -7で大足の外、無敵技以外で割り込めない、ヒットしたら中アッパーにしたい
+  - 2LP, LP, 弱ネクサス: 7F遅れ、短い技を潰してパニカン
+    - マイト: ヒットしても投げ間合いの外
+  - 2LP 2回
+    - {ヒット}, 中アッパー(+1)
+    - {ガード}, 2MP: 短い技を外から潰す、8F遅れ
+  - 通常投げ: 4F遅れ
+  - 後退: シミー
+
+下段。遠目の起き攻めでよく使う。
+
+ガードされても後退がシミーになる投げ間合いで+1になる。
+
+## DR 6MP: 29-34
+
+- DR 6MP(相打ち), HK/4HP
+- DR 6MP(h), 2MP
+- DR 6MP(g): +2で投げ間合いの外
+  - MP(c/相打ち), 2MP, ...
+  - MP(h), LP, 中アッパー(+1)
+  - MP(g): 4F遅れ、相打ちで2MPが入る
+    - LP, 弱ショット: -5/-6で大足の外
+    - LP, 弱ニー(+7): 立ちガードでも-1
+    - LP, 後退: 中足の外に出て差し返し狙い
+    - 2MP, 中ネクサス
+    - 後退
+  - 2LK, 2LP, 弱ニー
+
+MP(g)より少し近い。
+
+中央ではDR 6MP, MP, LP, 中アッパーだと遠くて起き攻めしづらいので、ヒットしたらDR 6MP, 2MPルートがベスト。
+端ではMPルートの方が火力が出る。
 
 ## 強ネクサス(+3): 34
 
 ガードされても五分、ヒットで2MPが繋がる。
+
+## 強ニー(+5): 34-39
+
+ガードされても五分以上。端ではヒットすると追撃できる。
 
 ## J.HP: 33-42
 
