--- a/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの立ち回り.md
@@ -135,3 +135,5 @@
 サガットは密着付近の距離の判別が難しい。歩きに頼れないので連携で距離を取りたいけど、近すぎると弱中パンが割り込まれるし、遠すぎると弱弱パンが届かない。ワンパンからショットだとショットに確反がある。中間択としては中パンネクサス。
 
 ネクサスの入れ込みが結構短くて難しいところ。中パン先端から届かないこともある。ネクサスをガードさせること自体は強い。
+
+ジャストパリィからでもHK(pc)から強アッパー-hで1700減る。
