--- a/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの攻めの状況.md
@@ -59,6 +59,21 @@
   - 6MP(+1): ヒットで2LP, LPが入る、ガードで-1
   - 中ショット(+7): 端ではガードさせて投げ間合いとシミー
 
+## {空} 4HP: 44-48
+
+その場受け身なら弱ニーからMPを重ねてもいいが、後方受け身も考えるとラッシュが無難。あるいは単に差し合いに戻ってもいい。
+とはいえとりあえず弱ニーで近づいておいて
+
+- 弱ニー
+  - {その場受け身}:
+    - MP
+    - 前投げ: タイミングによっては少し遅らせないといけない
+  - {後方受け身}:
+    - 2MP, 中ネクサス
+    - ガード
+
+ステップ, 中ショットが重なりやすいけど、有利すぎると重ならないし、後方受け身にも完全には重ならない。
+
 ## 4HP, 強ニー, 弱アッパー: 34
 
 - DR 6MP(+2): 中央では少し遠めだが2MPが繋がる、端では4HPが繋がる。
@@ -212,7 +227,7 @@ MP(+3)ルートが強い。シミーも狙える。投げは目押しで。
 
 MP, MP, LP, 中アッパーのように遠めで当てると持続当てになって29Fになる。
 
-## 中/強アッパー(+1): 28
+## 中アッパー(+1): 28
 
 - {端} ステップ: +5
 - {中央} 弱ショット
@@ -293,28 +308,34 @@ DIがギリギリ届かない。
 
 距離で持続当てになる場合は判別できないので、基本的に打撃か後退が無難。
 
-## 強ニー: 41-47
+## 強ニー(1): 40-41
 
 - DR 6LK/6MP: 中下段。後方受け身でも2MPが届く。
 - {中央} ステップ, 弱ショット: ジャンプできない。
-- {中央} 中ショット
+- {中央} 中ショット: 両受け身でジャンプできない
+  - {その場受け身}: しゃがみガードにも当たって+29
+    - {ガード}, 弱ショット: ジャンプできない
+    - {ガード}, 中ショット, 強ショット: ジャンプできない、ジャンプすると繋がる
+  - {後方受け身}: ジャンプできない
 
 ラッシュ投げが後方受け身に届かない。起き攻めは中の方が強い。
 
-## 強ニー(+4)(g): 4
+密着は41だが、2HP先端からキャンセルだと40Fになることもある。
+
+## 強ニー(2): 37-47
+
+## {屈} 強ニー(g): 4
 
 後退がシミーになる投げ間合い。
 
 相手がしゃがんでいると近くても(+9)固定。
 
-## 強ニー(+5)(g): 0-5
+## 強ニー(+8)(g): 3-5
+
+距離で(+8)になったら投げ間合いの外。
 
 鈍い音がしたら早めに当たっている。
 軽い音がしたら持続当てになっていて有利。
-
-近いと投げ間合い、(+8)以上は投げ間合いの外。
-
-相手がしゃがんでいると近くても(+9)固定。4F有利。(+10)の時は遠距離と同じ。
 
 ## ODニー: 66
 
