--- a/games/Street-Fighter/Six/characters/Sagat/サガットの特徴.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの特徴.md
@@ -80,3 +80,21 @@
 - DR 6MP
 - 強ニー = DR 6LK
 - バクステ 4回
+
+## モダンのSP技
+
+- N: 中ニー
+- 1: 弱ショット
+- 1A: OD下ショット
+- 2: 中ショット
+- 2A: OD上ショット
+- 3: 強ショット
+- 4: 中ネクサス
+- 6: 弱アッパー
+
+## モダンにない技
+
+- LP (AC1: 2LK, LPのみ)
+- MP
+
+ショットがコマンド入力なし。
