--- a/shared/human/mind/感情.md
+++ b/shared/human/mind/感情.md
@@ -32,3 +32,5 @@
 感情は表現で、表に出さない感情に意味はない。
 
 悲しみは何かを捨てるための感情だ。捨てないなら悲しむ必要もない。
+
+怒りや悲しみ、不機嫌のような感情だけでなく、喜びや楽しみ、笑顔、感謝なんかも相手をコントロールするための態度に過ぎない。相手をコントロールするための振る舞いが嫌なら、他人と付き合うこと自体やめて山に籠ったほうがいい。
