--- a/shared/society/社交.md
+++ b/shared/society/社交.md
@@ -69,3 +69,7 @@
 人に対して悪意を持って接すると、相手にも悪意を持った人しか残らない。善き人は淘汰されてしまう。
 
 「誰にも喜んで見せなくていい。自分の心の中だけで感じたことが全部。」『雑用付与術師が自分の最強に気付くまで』
+
+社交の基本はまず衝突を避けること。優しく接するのが基本だが、それを利用しようとする相手には武威を示す必要もある。餌と見れば噛み付いてくる害虫みたいな連中もいる。
+
+餌の前に堂々と姿を見せるのも、客に失礼な態度を取るのもどちらも間違っている。姿を大きく見せて威嚇しないといけないのは敵の前だけ。
