--- a/shared/voice/声.md
+++ b/shared/voice/声.md
@@ -122,3 +122,5 @@ speaking と singing は別に分けなくていいかも。
 声の軽さはキレと考えられる。一音一音のキレが悪いとのっぺりして抑揚のない感じになる。
 
 速い曲ほど軽い声で歌わないとキレが悪い。
+
+拡声器は3000-5000円くらいで買える。会社などで「声が小さい」と言われたら使うといい。
