--- a/shared/work/力.md
+++ b/shared/work/力.md
@@ -33,3 +33,5 @@ https://chat.openai.com/share/95eec5c2-1411-4c14-a703-3e3b9e9f8ab9
 個人の力が強くなるほど、組織よりもチームの力が重要になる。ただ、組織はチームのパフォーマンスを邪魔しないようにしないといけない。
 
 高さは重さだ。
+
+力には重さと速さが必要。
