--- a/games/Street-Fighter/Six/theory/守りの基本.md
+++ b/games/Street-Fighter/Six/theory/守りの基本.md
@@ -169,3 +169,11 @@ DIを拒否するなら、ジャンプより投げ。もちろん割り込めな
 キャンセルラッシュには最速で無敵技を合わせるのが基本。連続ガードにはガードから普通に読み合い。相手は3ゲージ使っているので、リーサルでないなら投げられていい。連続ガードの時に無敵技を漏らさないように注意。
 
 どくらさんは小技や入れ込みでどれだけ押し返せるかを「小回りが効く」と言っていた。
+
+反射神経が悪いと守りが弱い。反射神経が良い人は見てから止めればいい行動を止められない。
+
+守りの目的は攻めを切ることだが、安易に攻めを切ろうとしても切れない。あくまでも主導権は相手に取られていて、不利だと考えないといけない。
+
+攻めを切るためにはまず相手の攻めを凌いで、崩されないように耐えないといけない。一瞬の有利を見極めて割り込むのが基本。良い守りには反射神経が必要。
+
+守りに回っても簡単に崩されないなら、相手に攻められても無理しなくていい。ただ、反射神経が悪いとある程度割り切ってこちらのペースに持っていくしかない。読みで対処する。
