--- a/shared/music/vocal/training/tips/曲を覚える.md
+++ b/shared/music/vocal/training/tips/曲を覚える.md
@@ -114,3 +114,5 @@
 一曲の精度を上げていく場合、まずは曲を覚えて普通に歌えるのが大事。原曲通りというよりは地声で楽に歌う。キーも調整する。そのあとはアレンジの段階に入る。
 
 おふざけみたいな曲ほど仕上げておかないと格好がつかない。
+
+まずは息を十分確保できるくらいゆっくり歌ってリズムとメロディを取る。速く歌うとブレスが問題になるので、ゆっくりしたテンポから上げながら調整する。
