--- a/games/Street-Fighter/Six/characters/Sagat/サガットの特徴.md
+++ b/games/Street-Fighter/Six/characters/Sagat/サガットの特徴.md
@@ -59,17 +59,22 @@
 - {屈} HK
 - バクステ
 - 2MP
-- LK
+- LK = DR 2LP, 4HP
 - 2MK = 2HP
+- DR MP(g), MP, MP
 - 6MP
 - MK
 - {立} HK
+- DR MP, MP, LP
 - 2HK
-- HP = 6HK, SA2
+- DR 2LP, 2MP
+- DR MP(g), MP
+- HP = {空} 6HK, SA2
+- DR MP, 4HP
 - バクステ 2回
-- {立} 6HK
+- {立} 6HK = DR LP, 2MP
 - DR MP
-- 弱ニー
+- 弱ニー = DR LP
 - 6LK
 - 強ネクサス
 - DI
